# manim-studio

./: .gitignore  SCENE_GENERATION.md  pyproject.toml
manim_studio/: __init__.py  base.py  helpers.py  themes.py
skill/: SKILL.md
skill/screenplay-reviewer/: SKILL.md
skill/screenplay-to-manim/: SKILL.md
skill/screenplay-writer/: SKILL.md
templates/: scene_template.py
tests/: test_helpers.py
